--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
   "homepage": "https://github.com/Elvencedor/Project-Disco#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "joi": "^17.4.2",
-    "mongoose": "^6.0.13"
+    "mongoose": "^6.0.13",
+    "pino": "^7.2.0"
   },
   "devDependencies": {
-    "dotenv": "^10.0.0",
     "eslint": "^8.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.3",
